--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "relivator",
+  "name": "pedia-new",
   "version": "1.3.0",
   "private": true,
   "type": "module",
@@ -33,44 +33,44 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
-    "@clerk/elements": "^0.22.12",
-    "@clerk/nextjs": "^6.9.15",
-    "@clerk/themes": "^2.2.9",
+    "@clerk/elements": "^0.22.16",
+    "@clerk/nextjs": "^6.10.3",
+    "@clerk/themes": "^2.2.13",
     "@hookform/resolvers": "^3.10.0",
     "@loglib/tracker": "^0.8.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/mdx": "^15.1.5",
+    "@next/mdx": "^15.1.6",
     "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@react-email/components": "^0.0.32",
     "@react-email/tailwind": "1.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
-    "@t3-oss/env-nextjs": "^0.11.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
-    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-table": "^8.20.6",
     "@tremor/react": "^3.18.7",
     "@types/eslint__js": "^8.42.3",
@@ -85,16 +85,16 @@
     "consola": "^3.4.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.4",
+    "drizzle-orm": "^0.39.0",
     "embla-carousel-react": "8.5.2",
-    "framer-motion": "^12.0.0",
+    "framer-motion": "^12.0.6",
     "fs-extra": "^11.3.0",
     "geist": "^1.3.1",
     "globals": "^15.14.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.473.0",
+    "lucide-react": "^0.474.0",
     "nanoid": "^5.0.9",
-    "next": "^15.1.5",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
@@ -105,12 +105,12 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-cropper": "^2.3.3",
-    "react-day-picker": "^9.5.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-email": "^3.0.6",
     "react-hook-form": "^7.54.2",
-    "react-intersection-observer": "^9.15.0",
+    "react-intersection-observer": "^9.15.1",
     "react-is": "^19.0.0",
     "react-markdown": "^9.0.3",
     "react-medium-image-zoom": "^5.2.13",
@@ -118,11 +118,11 @@
     "react-textarea-autosize": "^8.5.7",
     "react-use-measure": "^2.1.1",
     "react-wrap-balancer": "^1.1.1",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.1",
     "resend": "^4.1.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.2",
-    "stripe": "^17.5.0",
+    "stripe": "^17.6.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -133,34 +133,35 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@cspell/dict-uk-ua": "^4.0.4",
-    "@eslint/js": "^9.18.0",
+    "@eslint/js": "^9.19.0",
     "@faker-js/faker": "^9.4.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.7",
-    "@types/pg": "^8.11.10",
-    "@types/react": "^19.0.7",
+    "@types/node": "^22.12.0",
+    "@types/pg": "^8.11.11",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "autoprefixer": "^10.4.20",
-    "cspell": "^8.17.2",
+    "cspell": "^8.17.3",
     "dotenv-cli": "^8.0.0",
-    "drizzle-kit": "^0.30.2",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "^15.1.5",
+    "drizzle-kit": "^0.30.3",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-perfectionist": "^4.7.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "execa": "^9.5.2",
-    "knip": "^5.42.2",
+    "knip": "^5.43.6",
     "pkg-types": "^1.3.1",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-code-titles": "^1.2.0",
     "rehype-pretty-code": "^0.14.0",
@@ -170,11 +171,11 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "rimraf": "^6.0.1",
-    "shiki": "^2.0.3",
-    "tailwindcss": "^3.4.17",
+    "shiki": "^2.1.0",
+    "tailwindcss": "^4.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0",
+    "typescript-eslint": "^8.22.0",
     "unist-builder": "^4.0.0",
     "unist-util-visit": "^5.0.0"
   }
